--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -17,6 +17,7 @@
     <script src="/utils/auth.js" type="module" defer></script>
     <script src="/utils/profile.js" type="module" defer></script>
     <script src="/static/js/profile.js" type="module" defer></script>
+    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
 </head>
 
 <body>
