--- a/Frontend/src/Users/users.html
+++ b/Frontend/src/Users/users.html
@@ -84,6 +84,13 @@
             </div>
         </div>
 
+        <div id="modal-confirm-delete" class="modal">
+            <div id="modal-confirm-delete" >
+                <p>¿Estás seguro de que deseas eliminar este usuario?</p>
+                <button id="confirmDelete">Sí</button>
+                <button id="cancelDelete">No</button>
+            </div>
+        </div>
     </main>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
