NUEVA MIGRACION PARA CONFIRMAR LA ACTUALIZACION

--- a/Frontend/src/Users/users.html
+++ b/Frontend/src/Users/users.html
@@ -85,10 +85,12 @@
         </div>
 
         <div id="modal-confirm-delete" class="modal">
-            <div id="modal-confirm-delete" >
-                <p>¿Estás seguro de que deseas eliminar este usuario?</p>
-                <button id="confirmDelete">Sí</button>
-                <button id="cancelDelete">No</button>
+            <div id="modal-confirm-delete">
+                <p>¿Estás seguro de querer eliminar este usuario?</p>
+                <div class="buttons-confirm">
+                    <button class="button-confirm-delete" id="confirmDelete">Sí</button>
+                    <button class="button-confirm-delete" id="cancelDelete">No</button>
+                </div>
             </div>
         </div>
     </main>
