--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -18,6 +18,7 @@
     <script src="/utils/profile.js" type="module" defer></script>
     <script src="/static/js/profile.js" type="module" defer></script>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+    <script type="module" src="/utils/socket.js"></script>
 </head>
 
 <body>
