Modificaciones en el nginx

--- a/Frontend/src/Records/records.html
+++ b/Frontend/src/Records/records.html
@@ -87,6 +87,7 @@
             <div id="registro" aria-label="Mapa interactivo de avistamientos">
                 <div class="filters">
                     <input type="text" id="search" class="search-input" placeholder="Buscar Avistamientos">
+                    <button class="generarPDF"  id="generarPDF">Generar PDF</button>
                 </div>
                 <div id="sightings-list" class="table-container">
                     <!-- Aquí se cargarán los avistamientos -->
