Ajustes en Registro

--- a/Frontend/src/Register/register.html
+++ b/Frontend/src/Register/register.html
@@ -29,11 +29,11 @@
                     <div class="password-input-wrapper">
                         <input type="password" id="password" name="password" placeholder="••••••••" required aria-required="true" autocomplete="new-password" minlength="8">
                         <button type="button" id="togglePassword" aria-label="Mostrar contraseña">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="eye-icon visible">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="eye-icon eye-hidden">
                                 <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
                                 <circle cx="12" cy="12" r="3"></circle>
                             </svg>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="eye-icon hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="eye-icon eye-visible">
                                 <path d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"></path>
                                 <line x1="1" y1="1" x2="23" y2="23"></line>
                             </svg>
@@ -41,16 +41,26 @@
                     </div>
                     <div class="invalid-feedback">Las contraseñas no coinciden o no son válidas.</div>
                 </div>
+                <div class="password-requirements">
+                    <p>La contraseña debe contener:</p>
+                    <ul aria-live="polite">
+                        <li data-criterion="length">Al menos 8 caracteres</li>
+                        <li data-criterion="upper">Una letra mayúscula</li>
+                        <li data-criterion="lower">Una letra minúscula</li>
+                        <li data-criterion="number">Un número</li>
+                        <li data-criterion="symbol">Un símbolo especial</li>
+                    </ul>
+                </div>
                 <div class="form-group">
                     <label for="confirmPassword">Confirmar Contraseña</label>
                     <div class="password-input-wrapper">
                         <input type="password" id="confirmPassword" name="confirmPassword" placeholder="••••••••" required aria-required="true" autocomplete="new-password" minlength="8">
                         <button type="button" id="toggleConfirmPassword" aria-label="Mostrar contraseña">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="eye-icon visible">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="eye-icon eye-hidden">
                                 <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
                                 <circle cx="12" cy="12" r="3"></circle>
                             </svg>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="eye-icon hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="eye-icon eye-visible">
                                 <path d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"></path>
                                 <line x1="1" y1="1" x2="23" y2="23"></line>
                             </svg>
@@ -62,19 +72,19 @@
                     <div class="form-group">
                         <label for="name">Nombre</label>
                         <input type="text" id="name" name="name" placeholder="Juan" required aria-required="true" autocomplete="given-name" pattern="^[A-Za-zÀ-ÿ\s]+$" title="Solo se permiten letras y espacios">
-                        <div class="invalid-feedback">Solo puede contener letras y espacios.</div>
+                        <div class="invalid-feedback">Solo letras y espacios.</div>
                     </div>
                     <div class="form-group">
                         <label for="lastname">Apellidos</label>
                         <input type="text" id="lastname" name="lastname" placeholder="Pérez" required aria-required="true" autocomplete="family-name" pattern="^[A-Za-zÀ-ÿ\s]+$" title="Solo se permiten letras y espacios">
-                        <div class="invalid-feedback">Solo puede contener letras y espacios</div>
+                        <div class="invalid-feedback">Solo letras y espacios</div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="rankMilitar">Rango</label>
                     <input type="text" id="rankMilitar" name="rankMilitar" placeholder="Cabo" required
                         aria-required="true" pattern="^[A-Za-zÀ-ÿ\s]+$" title="Solo se permiten letras y espacios">
-                    <div class="invalid-feedback">Solo puede contener letras y espacios</div>
+                    <div class="invalid-feedback">Solo letras y espacios</div>
                 </div>
                 <div class="form-group">
                     <label for="dni">DNI</label>
@@ -95,7 +105,7 @@
                     <p>¿Ya estás registrado? <a href="/login" class="register-link">Accede a tu cuenta</a></p>
                 </div>
             </form>
-            <div id="successMessage" class="success-message" style="display: none;">
+            <div id="successMessage" class="success-message" style="display: none;" role="alert" aria-live="assertive">
                 <div class="icon-container" aria-hidden="true">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="check-icon">
                         <polyline points="20 6 9 17 4 12"></polyline>
