Animación de redirección al Login

--- a/Frontend/src/Register/register.html
+++ b/Frontend/src/Register/register.html
@@ -113,6 +113,10 @@
                 </div>
                 <h2>Registro Exitoso</h2>
                 <p>Su solicitud de registro ha sido recibida y está pendiente de aprobación por un administrador. Le notificaremos por correo electrónico cuando su cuenta esté activa.</p>
+                <div class="login-redirect">
+                    <button onclick="redirectToLogin()" class="login-redirect-button">Ir al Login</button>
+                </div>
+                <div class="progress-bar"></div>
             </div>
         </main>
     </div>
