--- a/Frontend/src/Register/register.html
+++ b/Frontend/src/Register/register.html
@@ -102,18 +102,18 @@
 
                 <div class="form-row">
                     <div class="form-group">
+                        <label for="powerMilitary">Fuerza Perteneciente</label>
+                        <select id="powerMilitary" name="powerMilitary" required class="form-select">
+                            <option value="" disabled selected>Seleccione la fuerza Perteneciente</option>
+                            <option value="Fuerza Aérea">Fuerza Aérea</option>
+                        </select>
+                        <div class="invalid-feedback">Seleccione una dirección.</div>
+                    </div>
+                    <div class="form-group">
                         <label for="rankMilitar">Rango</label>
                         <input type="text" id="rankMilitar" name="rankMilitar" placeholder="Cabo" required
                             aria-required="true" pattern="^[A-Za-zÀ-ÿ\s]+$" title="Solo se permiten letras y espacios">
                         <div class="invalid-feedback">Solo letras y espacios</div>
-                    </div>
-                    <div class="form-group">
-                        <label for="powerMilitary">Fuerza Perteneciente</label>
-                        <select id="powerMilitary" name="powerMilitary" required class="form-select">
-                            <option value="" disabled selected>Seleccione dirección</option>
-                            <option value="Fuerza Aérea">Fuerza Aérea</option>
-                        </select>
-                        <div class="invalid-feedback">Seleccione una dirección.</div>
                     </div>
                 </div>
                 <div class="form-group">
