--- a/Frontend/src/Register/register.html
+++ b/Frontend/src/Register/register.html
@@ -30,7 +30,7 @@
                     <div class="password-input-wrapper">
                         <input type="password" id="password" name="password" placeholder="••••••••" required
                             aria-required="true" autocomplete="new-password" minlength="8">
-                        <button type="button" id="togglePassword" aria-label="Mostrar contraseña">
+                        <button type="button" id="togglePassword" tabindex="-1" aria-label="Mostrar contraseña">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round" class="eye-icon eye-hidden">
@@ -64,7 +64,7 @@
                     <div class="password-input-wrapper">
                         <input type="password" id="confirmPassword" name="confirmPassword" placeholder="••••••••"
                             required aria-required="true" autocomplete="new-password" minlength="8">
-                        <button type="button" id="toggleConfirmPassword" aria-label="Mostrar contraseña">
+                        <button type="button" id="toggleConfirmPassword" tabindex="-1" aria-label="Mostrar contraseña">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round" class="eye-icon eye-hidden">
