Logout en página de usuarios

--- a/Frontend/src/Users/users.html
+++ b/Frontend/src/Users/users.html
@@ -31,6 +31,15 @@
                 <span class="profile-name"></span>
                 <span class="profile-role"></span>
             </div>
+            <button id="profileDropdownBtn" class="profile-dropdown-btn" aria-label="Profile options">
+                <i class="fas fa-chevron-down"></i>
+            </button>
+            <div id="profileDropdownContent" class="profile-dropdown-content">
+                <a href="#" id="logoutBtn" class="logout-btn">
+                    <i class="fas fa-sign-out-alt"></i>
+                    Cerrar sesión
+                </a>
+            </div>
         </div>
     </header>
 
