--- a/Frontend/src/Register/register.html
+++ b/Frontend/src/Register/register.html
@@ -104,8 +104,7 @@
                     <div class="form-group">
                         <label for="powerMilitary">Fuerza Perteneciente</label>
                         <select id="powerMilitary" name="powerMilitary" required class="form-select">
-                            <option value="" disabled selected>Seleccione la fuerza Perteneciente</option>
-                            <option value="Fuerza Aérea">Fuerza Aérea</option>
+                            <option class="optionsPower" value="Fuerza Aérea">Fuerza Aérea</option>
                         </select>
                         <div class="invalid-feedback">Seleccione una dirección.</div>
                     </div>
