filter user status

--- a/Frontend/src/Users/users.html
+++ b/Frontend/src/Users/users.html
@@ -97,6 +97,12 @@
                         </svg>
                     </button>
                 </div>
+                <div class="buttons-for-status">
+                    <button class="button-status">Todos</button>
+                    <button class="button-status">Activos</button>
+                    <button class="button-status">Pendientes</button>
+                    <button class="button-status">Blockeados</button>
+                </div>
                 <div id="sightings-list" class="users-table">
                     <!-- Aquí se cargarán los avistamientos -->
                 </div>
