--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -9,6 +9,7 @@
     <title>Mapa de Avistamientos</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/normalize.css" />
     <link rel="stylesheet" href="/static/css/variables.css" />
     <link rel="stylesheet" href="/static/css/profile.css" />
     <link rel="stylesheet" href="/static/css/navigation.css" />
@@ -45,8 +46,6 @@
             </div>
         </div>
     </header>
-
-    <div id="profileDropdownOverlay" class="profile-dropdown-overlay"></div>
 
     <main class="main-content">
         <aside class="sidebar">
