--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -170,7 +170,8 @@
                         </div>
                         
                         <div class="filter-feedback" id="filter-feedback"></div>
-                      </div>
+                    </div>
+                    <div class="modal-overlay" id="modal-overlay"></div>
                 </div>
             </div>
             <div id="map" aria-label="Mapa interactivo de avistamientos"></div>
