terminado change and fotgot

--- a/Frontend/src/Change-password/change-password.html
+++ b/Frontend/src/Change-password/change-password.html
@@ -42,10 +42,11 @@
                             </svg>
                         </button>
                     </div>
-
                 </div>
                 <div class="form-options">
-                    <button type="button" class="reset-password-btn">¿Recordaste la contraseña?</button>
+                    <a href="/login">
+                        <button type="button" class="reset-password-btn">¿Recordaste la contraseña?</button>
+                    </a>    
                 </div>
                 <button type="submit" class="submit-btn">
                     Enviar Email
