--- a/Frontend/src/Forgot-password/forgot-password.html
+++ b/Frontend/src/Forgot-password/forgot-password.html
@@ -24,7 +24,9 @@
                     <div class="invalid-feedback">Por favor, ingrese un correo válido.</div>
                 </div>
                 <div class="form-options">
-                    <button type="button" class="reset-password-btn">¿Recordaste la contraseña?</button>
+                    <a href="/login.html">
+                        <button type="button" class="reset-password-btn">¿Recordaste la contraseña?</button>
+                    </a>
                 </div>
                 <button type="submit" class="submit-btn">
                     Enviar Email
