funcionalidades de change y forgot

--- a/Frontend/src/Change-password/change-password.html
+++ b/Frontend/src/Change-password/change-password.html
@@ -48,8 +48,8 @@
                         <button type="button" class="reset-password-btn">¿Recordaste la contraseña?</button>
                     </a>    
                 </div>
-                <button type="submit" class="submit-btn">
-                    Enviar Email
+                <button type="submit" class="submit-btn" id="changePasswordButton" >
+                    Cambiar Contraseña
                 </button>
                 <div class="separator">
                     <span>o</span>
@@ -60,6 +60,7 @@
             </form>
         </main>
     </div>
+    <script src="change-password.js"></script>
 </body>
 
 </html>
