--- a/Frontend/src/Users/users.html
+++ b/Frontend/src/Users/users.html
@@ -102,7 +102,7 @@
                     <button class="button-status">Todos</button>
                     <button class="button-status">Activos</button>
                     <button class="button-status">Pendientes</button>
-                    <button class="button-status">Blockeados</button>
+                    <button class="button-status">Bloqueados</button>
                 </div>
                 <div id="sightings-list" class="users-table">
                     <!-- Aquí se cargarán los avistamientos -->
