Arreglos por bugs

--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -90,7 +90,7 @@
                     <div class="map-search">
                         <input type="text" id="search-field" class="search-input" placeholder="Navega a una región...">
                         <i class="fas fa-paper-plane search-icon search-icon"></i>
-                        <button type="button" class="clear-button" aria-label="Limpiar búsqueda">
+                        <button type="button" class="clear-button" id="clear-search-button" aria-label="Limpiar búsqueda">
                           <i class="fas fa-times"></i>
                         </button>
                     </div>
@@ -350,4 +350,4 @@
     </noscript>
 </body>
 
-</html> 
+</html>
