Agrego current Location

--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+    <meta name="viewport" content="width=device-width, initial-scale=5.0">
     <meta name="description" content="Mapa interactivo para registrar y visualizar avistamientos de aeronaves">
     <meta name="theme-color" content="#26252A" />
     <title>Mapa de Avistamientos</title>
@@ -199,6 +199,7 @@
                         <div class="coordinates">
                             <div><label>Longitud:</label><span id="coordinateLog">32.7981101</span></div>
                             <div><label>Latitud:</label><span id="coordinateLat">-54.6501234</span></div>
+                            <div><label>Ubicacion de envio:</label><span id="current_location">Argentina</span></div>
                         </div>
                     </div>
                 </div>
