--- a/Frontend/src/Records/records.html
+++ b/Frontend/src/Records/records.html
@@ -87,12 +87,15 @@
         <div class="register-container">
             <div id="registro" aria-label="Mapa interactivo de avistamientos">
                 <div class="filters">
+                   <div class="searchAndFilter">
                     <div class="records-search">
                         <input type="text" id="search" class="search-input" placeholder="Buscar Avistamientos">
                         <i class="fas fa-search search-icon"></i>
                         <button type="button" class="clear-button" aria-label="Limpiar búsqueda">
                         </button>
                     </div>
+                    <button class="filterByDate" id="filterByDate">Filtrar por Fecha</button>
+                </div>
                     <button class="generarPDF" id="generarPDF">Generar PDF</button>
                 </div>
                 <div id="sightings-list" class="table-container">
@@ -158,10 +161,28 @@
         </div>
     </div>
 
+    <div id="date-filter-modal" class="modal" aria-hidden="true">
+        <div class="modal-content" role="dialog" aria-labelledby="date-filter-modal-title">
+            <button class="close-button" id="close-date-filter-modal" aria-label="Close modal">&times;</button>
+            <h2 id="date-filter-modal-title">Filtrar por Fecha</h2>
+            <form>
+                <div class="form-group">
+                    <label for="start-date">Desde</label>
+                    <input type="date" id="start-date" class="modal-input">
+                </div>
+                <div class="form-group">
+                    <label for="end-date">Hasta</label>
+                    <input type="date" id="end-date" class="modal-input">
+                </div>
+                <div class="buttons-confirm">
+                    <button type="button" class="button-confirm-delete" id="applyDateFilter">Confirmar</button>
+                    <button type="button" class="button-confirm-delete" id="clearDateFilter">Eliminar Filtros</button>
+                </div>
+            </form>
+        </div>
+    </div>
 
     <script src="records.js" type="module"></script>
-
-
 
     <noscript>
         <p>Esta página requiere JavaScript para funcionar correctamente. Por favor, habilite JavaScript en su navegador.
