--- a/Frontend/src/Records/records.html
+++ b/Frontend/src/Records/records.html
@@ -25,8 +25,8 @@
 
 <body>
     <header class="header">
-        <img class="logo" src="/static/img/logo.jpg" alt="Logo de la aplicación de avistamientos">
-        <div class="title-container">
+        <img class="logo" src="/static/img/escudo_dorado.png" alt="Logo de la aplicación de avistamientos">
+                <div class="title-container">
             <h1 class="title">Registros de Avistamientos</h1>
         </div>
         <div class="profile">
