--- a/Frontend/src/Register/register.html
+++ b/Frontend/src/Register/register.html
@@ -105,6 +105,10 @@
                         <label for="powerMilitary">Fuerza Perteneciente</label>
                         <select id="powerMilitary" name="powerMilitary" required class="form-select">
                             <option class="optionsPower" value="Fuerza Aérea">Fuerza Aérea</option>
+                            <option class="optionsPower" value="Ejercito Armada">Ejercito Armada</option>
+                            <option class="optionsPower" value="Gendarmería">Gendarmería</option>
+                            <option class="optionsPower" value="Prefectura ">Prefectura </option>
+                            <option class="optionsPower" value="Policía Provincial ">Policía Provincial </option>
                         </select>
                         <div class="invalid-feedback">Seleccione una dirección.</div>
                     </div>
