Cambios para S.A.D.A Fuerza aerea

--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+    <meta name="viewport" content="width=device-width">
     <meta name="description" content="Mapa interactivo para registrar y visualizar avistamientos de aeronaves">
     <meta name="theme-color" content="#26252A" />
     <title>Mapa de Avistamientos</title>
@@ -24,7 +24,7 @@
 
 <body>
     <header class="header" data-loaded="false">
-        <img class="logo" src="/static/img/escudo_dorado.png" alt="Logo de la aplicación de avistamientos">
+        <img class="logo" src="/static/img/SADA.png" alt="Logo de la aplicación de avistamientos">
         <div class="title-container">
             <h1 class="title">Mapa de Avistamientos</h1>
             <span class="markers-count"></span>
