--- a/Frontend/src/Login/login.html
+++ b/Frontend/src/Login/login.html
@@ -65,6 +65,12 @@
             </form>
         </main>
     </div>
+    <div id="modal-blocked" class="modal-blocked" style="display:none;">
+        <div class="modal-blocked-content">
+            <span id="modal-blocked-message"></span>
+            <button id="modal-blocked-close" class="modal-blocked-close">Cerrar</button>
+        </div>
+    </div>
     <noscript>
         <p>Esta página requiere JavaScript para funcionar correctamente. Por favor, habilite JavaScript en su navegador.
         </p>
