--- a/Frontend/src/Records/records.html
+++ b/Frontend/src/Records/records.html
@@ -25,7 +25,7 @@
 
 <body>
     <header class="header">
-        <img class="logo" src="/static/img/escudo_dorado.png" alt="Logo de la aplicación de avistamientos">
+        <img class="logo" src="/static/img/SADA.png" alt="Logo de la aplicación de avistamientos">
                 <div class="title-container">
             <h1 class="title">Registros de Avistamientos</h1>
         </div>
