ingreso del supervisor

--- a/Frontend/src/Index/index.html
+++ b/Frontend/src/Index/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <header class="header" data-loaded="false">
-        <img class="logo" src="/static/img/SADA.png" alt="Logo de la aplicación de avistamientos">
+        <img class="logo" src="/static/img/LogoOficial.ico" alt="Logo de la aplicación de avistamientos">
         <div class="title-container">
             <h1 class="title">Mapa de Avistamientos</h1>
             <span class="markers-count"></span>
