--- a/Frontend/src/Users/users.html
+++ b/Frontend/src/Users/users.html
@@ -25,7 +25,7 @@
 
 <body>
     <header class="header">
-        <img class="logo" src="/static/img/SADA.png" alt="Logo de la aplicación de avistamientos">
+        <img class="logo" src="/static/img/LogoOficial.ico" alt="Logo de la aplicación de avistamientos">
         <div class="title-container">
             <h1 class="title">Tabla de Usuarios</h1>
         </div>
