--- a/Frontend/src/Records/records.html
+++ b/Frontend/src/Records/records.html
@@ -120,6 +120,9 @@
         <div class="modal-content" role="dialog" aria-labelledby="modal-title">
             <button class="close-button" id="close-observations-modal" aria-label="Close modal">&times;</button>
             <h2 id="modal-title">Detalles</h2>
+            <div class="estado-verificacion">
+                <span id="modal-estado-verificacion" class="badge-estado"></span>
+            </div>
             <form>
 
                 <div class="form-group mobile-only full-width">
